--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled = true
+
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -40,32 +42,23 @@ android {
 }
 
 protobuf {
-    protoc {
-        artifact = "com.google.protobuf:protoc:3.12.0"
-    }
+    protoc { artifact = 'com.google.protobuf:protoc:3.5.1-1' }
     plugins {
-        grpc {
-            artifact = "io.grpc:protoc-gen-grpc-java:1.30.0"
+        javalite { artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0" }
+        grpc { artifact = 'io.grpc:protoc-gen-grpc-java:1.13.1' // CURRENT_GRPC_VERSION
         }
     }
     generateProtoTasks {
         all().each { task ->
-            task.builtins {
-                remove javanano
-                java {
-                    option 'lite'
-                }
-            }
-
             task.plugins {
-                grpc {
-                    // Options added to --grpc_out
-                    option 'lite'
-                }
+                javalite {}
+                grpc { // Options added to --grpc_out
+                    option 'lite' }
             }
         }
     }
 }
+def  CURRENT_GRPC_VERSION='1.25.0'
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -80,9 +73,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.google.protobuf:protobuf-lite:3.0.1'
-    implementation 'io.grpc:grpc-okhttp:1.25.0'
-    implementation 'io.grpc:grpc-protobuf-lite:1.25.0'
-    implementation 'io.grpc:grpc-stub:1.36.0'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "io.grpc:grpc-okhttp:$CURRENT_GRPC_VERSION"
+    implementation "io.grpc:grpc-protobuf-lite:$CURRENT_GRPC_VERSION"
+    implementation "io.grpc:grpc-stub:1.36.0"
+    implementation("androidx.multidex:multidex:2.0.1")
+
 }
