--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ protobuf {
     }
 }
 def  CURRENT_GRPC_VERSION='1.25.0'
+def preference_version = "1.1.1"
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -70,6 +71,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.preference:preference:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -78,5 +80,6 @@ dependencies {
     implementation "io.grpc:grpc-protobuf-lite:$CURRENT_GRPC_VERSION"
     implementation "io.grpc:grpc-stub:1.36.0"
     implementation("androidx.multidex:multidex:2.0.1")
+    implementation "androidx.preference:preference-ktx:$preference_version"
 
 }
